   * Added: A new tooltip window.
 * Language and i18n:
   * Updated translations:
 * User interface:
   * New UI for displaying errors detected during the core and add-on WML
     loading process (parser and preprocessor errors), including the
     ability to copy the report to clipboard.
   * Fixed bug #21584: Properly redraw the minimap when the minimap is
     resized.
 * WML engine:
   * WML loading phase errors are reported to stderr in a new indented format.
   * Implemented [true] and [false] ConditionalWML tags, which describe a
     condition that always yields true or false, respectively.
   * Fixed: Disallow change and remove sections without an id in the ThemeWML.
 * Miscellaneous and bug fixes:
   * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
   * Added -Wold-style-cast to the CMake strict flags.

Version 1.11.9:
 * Add-ons client:
   * Display the first and last upload dates in the Description dialog.
 * Add-ons server:
   * Record the first upload date and time for new add-ons.
   * Removed ancient compatibility code used only for add-ons stored by some
     1.5.x versions.
 * AI:
   * Default AI: Gold saving is turned off by default again
   * New macros AI_SAVE_GOLD and AI_SAVE_GOLD_DEFAULT for easy enabling of
     recruitment gold saving in specific scenarios
   * Wolves Micro AI: new optional parameter attack_only_prey=
 * Campaigns:
   * Heir to the Throne:
     * Gave Li'sar a new ability "initiative" (grants adjacent allies first
       strike in melee).
   * Son of the Black Eye:
     * Rebalancing of the campaign continues and is done for Scenarios 1 (End
       of Peace) through 12 (Giving Some Back).  In addition, the following
       not directly balance related changes have also been made:
     * S3: remove AI controller right-click menu option
     * S4 & S9: make AI attack enemies 1 XP from leveling so that it is not
       possible to block key locations with such units