@@ -19,14 +19,13 @@
 
 			[draw]
 
-# Blurring doesn't work yet, keeps adding
-#				[pre_commit]
-#
-#					[blur]
-#						depth = 1
-#					[/blur]
-#
-#				[/pre_commit]
+				[pre_commit]
+
+					[blur]
+						depth = 1
+					[/blur]
+
+				[/pre_commit]
 
 				[image]
 					name = "dialogs/translucent54-border-topleft.png"
