@@ -24,6 +24,7 @@ Version 1.11.9+dev:
      ability to copy the report to clipboard.
    * Fixed bug #21584: Properly redraw the minimap when the minimap is
      resized.
+   * Fixed: Enable blurring in the title screen.
  * WML engine:
    * WML loading phase errors are reported to stderr in a new indented format.
    * Implemented [true] and [false] ConditionalWML tags, which describe a
